--- a/coordinates/style.css
+++ b/coordinates/style.css
@@ -10,37 +10,32 @@ body {
 
 .target {
   position: absolute;
-  top: 50%;
-  left: 50%;
   width: 60px;
   height: 60px;
   background-image: url('./target.png');
   background-size: contain;
-  transform: translate(-50%, -50%);
+  transform: translate(50vw, 50vh);
 }
 
 .horizontal {
   position: absolute;
-  top: 50%;
   width: 100vw;
   height: 1px;
   background-color: white;
-  transform: translateY(-50%);
+  transform: translateY(50vh);
 }
 
 .vertical {
   position: absolute;
-  left: 50%;
   width: 1px;
   height: 100vh;
   background-color: white;
-  transform: translateX(-50%);
+  transform: translateX(50vw);
 }
 
 .coordinates {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  margin: 15px;
   color: white;
   transform: translate(15px, 15px);
 }
